fix: add scroll-snap-align to footer so it can be reached on homepage

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -1,7 +1,8 @@
 .footer {
   text-align: center;
   padding: 28px;
-  min-height: 100vh;
+  height: 100vh;
+  scroll-snap-align: start;
   display: flex;
   flex-direction: column;
   gap: 20px;
